# headline-classifier-rs

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile.toml  README.md
.github/workflows/: rust-app.yml
data/: index_to_class.json  mock_vocab.json  test.csv  train.csv  vocab.json
src/: lib.rs  main.rs
src/common/: convert.rs  encode.rs  exception.rs  mapping.rs  mod.rs  model.rs  paths.rs  preprocess.rs  vocabulary.rs
src/serving/: inference.rs  mod.rs  processing.rs  request_model.rs  serve.rs  types.rs
src/training/: config.rs  dataset.rs  dummy.rs  metrics.rs  mod.rs  train.rs  transform.rs
tests/: encode.rs  metrics.rs  preproces.rs  vocabulary.rs
